--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,6 +5,22 @@
 :root {
     --primary-color: #6c7ee1;
     --color-green: #86e3ce;
+    --white: #fff;
+    --bg-white: #f5f5f5;
+    --black: #000;
+    --grayBlack: #212529;
+    --ease025s: ease 0.25s;
+}
+
+/* Dark theme */
+
+.dark-mode {
+    --primary-color: #6c7ee1;
+    --color-green: #86e3ce;
+    --white: #000;
+    --bg-white: #000;
+    --black: #fff;
+    --grayBlack: #000;
 }
 
 html {
@@ -14,7 +30,7 @@ html {
 body {
     font-size: 1.6rem;
     font-family: "Roboto", sans-serif;
-    background-color: #f5f5f5;
+    background-color: var(--bg-white);
 }
 
 html,
