--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -31,6 +31,7 @@ body {
     font-size: 1.6rem;
     font-family: "Roboto", sans-serif;
     background-color: var(--bg-white);
+    cursor: none;
 }
 
 html,
@@ -60,10 +61,19 @@ body::-webkit-scrollbar-thumb:hover {
 
 a {
     text-decoration: none;
+    cursor: none;
 }
 
 a:hover {
     text-decoration: none;
+}
+
+[type="button"]:not(:disabled),
+[type="reset"]:not(:disabled),
+[type="submit"]:not(:disabled),
+button:not(:disabled),
+input {
+    cursor: none;
 }
 
 .line-clamp {
